# clipbridge

./: Cargo.toml  README.md  USAGE.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs  main.rs  shortcut.rs  tray.rs
src/components/: ClipboardOverlay.tsx  MainWindow.tsx  NoteEditor.tsx  NoteList.tsx  Sidebar.tsx
src/context/: AppContext.tsx  ThemeContext.tsx
src/styles/: globals.css
