[package]
name = "clipbridge"
version = "0.1.1"
description = "ClipBridge - 轻量级剪贴板历史 + Markdown 便签"
authors = ["ClipBridge Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "clipbridge_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "clipbridge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
thiserror = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
directories = "5"
base64 = "0.22"
